--- a/.github/workflows/create_pull_request.yml
+++ b/.github/workflows/create_pull_request.yml
@@ -51,4 +51,4 @@ jobs:
           source_branch: "develop"
           destination_branch: "master"
           pr_title: "Pulling ${{ github.ref }} into master" # Title of pull request
-          pr_body: ":crown: *An automated PR*"
+          pr_body: git log --merges --first-parent --reverse --pretty=format:"* %b"
