--- a/.github/workflows/create_pull_request.yml
+++ b/.github/workflows/create_pull_request.yml
@@ -44,6 +44,8 @@ jobs:
           title: Update AUTHORS
           body: Credit new contributors by updating AUTHORS
           branch: update-authors
+      - name: create diff
+        run: echo ::set-env name=BODY::$(git log --merges --first-parent --reverse --pretty=format:"* %b")
       - name: pull-request
         uses: repo-sync/pull-request@v2
         with:
@@ -51,4 +53,4 @@ jobs:
           source_branch: "develop"
           destination_branch: "master"
           pr_title: "Pulling ${{ github.ref }} into master" # Title of pull request
-          pr_body: git log --merges --first-parent --reverse --pretty=format:"* %b"
+          pr_body: "${{ env.BODY }}"
