--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -11,6 +11,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - name: pull-request
         uses: repo-sync/pull-request@v2
         with:
