--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -16,8 +16,8 @@ jobs:
         uses: repo-sync/pull-request@v2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          source_branch: "develop"
-          destination_branch: "master"
+          source_branch: "master"
+          destination_branch: "develop"
           pr_title: "Pulling ${{ github.ref }} into develop" # Title of pull request
           pr_body: "${{ env.BODY }}"
 
