--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -7,7 +7,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  create:
+  create-pullrequest:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
@@ -16,8 +16,8 @@ jobs:
         uses: repo-sync/pull-request@v2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          source_branch: "master"
-          destination_branch: "develop"
+          source_branch: 'master'
+          destination_branch: 'develop'
           pr_title: "Pulling ${{ github.ref }} into develop" # Title of pull request
-          pr_body: "${{ env.BODY }}"
-
+          pr_body: "Pulling ${{ github.ref }} into develop"
+          pr_reviewer: 'kehonda'
