--- a/.github/workflows/pulling_into_develop.yml
+++ b/.github/workflows/pulling_into_develop.yml
@@ -7,12 +7,12 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  create-pullrequest:
+  pulling_into_develop:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: pull-request
+      - name: create-pull-request
         uses: repo-sync/pull-request@v2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
