--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,4 +1,4 @@
-name: Add Label for develop branch
+name: Add Label and Reviewer for develop branch
 
 on:
   pull_request:
@@ -6,11 +6,14 @@ on:
       - develop
 
 jobs:
-  label:
+  add_label_and_reviewer:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/labeler@v2
         with:
           repo-token: "${{ secrets.GITHUB_TOKEN }}"
-          configuration-path: ".github/labeler-develop.yml"
+          configuration-path: '.github/labeler-develop.yml'
       - uses: kentaro-m/auto-assign-action@v1.1.1
+        with:
+          repo-token: "${{ secrets.GITHUB_TOKEN }}"
+          configuration-path: '.github/auto_assign.yml'
