--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -14,3 +14,13 @@ jobs:
         run: |
           git checkout -b release
           git push origin release
+      - name: create diff
+        run: echo ::set-env name=BODY::$(git log origin/master..origin/release --merges --first-parent --reverse --pretty=format:"* %b \n")
+      - name: pull-request
+        uses: repo-sync/pull-request@v2
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          source_branch: "release"
+          destination_branch: "master"
+          pr_title: "Pulling ${{ github.ref }} into master" # Title of pull request
+          pr_body: "${{ env.BODY }}"
