--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -8,19 +8,22 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Set current datetime as env variable
+        id: datetime
+        run: echo "::set-env name=datetime::$(date +'%Y-%m-%dT%H:%M:%S')"
       - name: Create new Branch
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git checkout -b release
-          git push origin release
+          git checkout -b release/${{ steps.datetime.outputs.datetime }}
+          git push origin release/${{ steps.datetime.outputs.datetime }}
       - name: create diff
-        run: echo ::set-env name=BODY::$(git log origin/master..origin/release --merges --first-parent --reverse --pretty=format:"* %b \n")
+        run: echo ::set-env name=BODY::$(git log origin/master..origin/release/${{ steps.datetime.outputs.datetime }} --merges --first-parent --reverse --pretty=format:"* %b \n")
       - name: pull-request
         uses: repo-sync/pull-request@v2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          source_branch: "release"
+          source_branch: "release$/{{ steps.datetime.outputs.datetime }}"
           destination_branch: "master"
-          pr_title: "Pulling ${{ github.ref }} into master" # Title of pull request
+          pr_title: release/${{ steps.datetime.outputs.datetime }} # Title of pull request
           pr_body: "${{ env.BODY }}"
