--- a/.github/workflows/env.yml
+++ b/.github/workflows/env.yml
@@ -17,9 +17,11 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: Create Description
-        run: echo ::set-env name=DESCRIPTION::$(git log --pretty=format:"- [ ] %b" -n 3)
+        run: echo ::set-env name=DESCRIPTION::$(git log --pretty=format:"- [ ] %b \n" -n 3)
       - name: debug
         run: echo $DESCRIPTION
       - name: debug2
